# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Applied some code cleanup to the snmp library. [Brendan Byrd]

o [NSE] Fixed a bug with an undeclared variable in snmp-ios-config.nse [Patrik]

o On Windows, the directory <HOME>\AppData\Roaming\nmap is now
  searched for data files. This is the equivalent of $HOME/.nmap on
  POSIX. [David]

o [NSE] Applied patch to add additional version information to Mongodb scripts
  [Martin Swende]

o [NSE] Added path argument to the http-auth script and changed so that script
  output was returned using stdnse.format_output [Duarte Silva, Patrik]

o [NSE] Fixed bug in the http library that would fail parsing authentication
  headers if no parameters were present. [Patrik]

o Added new fingerprints to http-enum for Subversion, CVS and Apache Archiva
  [Duarte Silva]

o [NSE] Added the script http-open-redirect that finds web pages that do not
  properly validate parameters used for HTTP redirects. [Martin Swende]

o [NSE] Added the script broadcast-pc-anywhere that discovers host running the
  PC-Anywhere remote control software on the LAN. [Patrik]

o [NSE] Added the script broadcast-pc-duo that discovers hosts running the
  PC-Duo remote control software on the LAN. [Patrik]

o Added probes for discovering PC-Duo and PC-Anywhere hosts. [Patrik]

o [NSE] Added support for forcing scripts to run agains certain ports by adding
  a plus in front of the script name. [Martin Swende]

o [NSE] Added the script broadcast-wake-on-lan that wakes systems from sleep
  by sending a Wake On Lan packet. [Patrik]

o [NSE] Added the script http-unsafe-output-escaping that checks if parameter
  contents are reflected in responses, aiding in discovering potential XSS
  vulnerabilities. [Martin Swende]

o Made a syntax change in the zenmap.desktop file for compliance with
  the XDG standard. [Frederik Schwarzer]

o [NSE] Added the script http-grep that attempts to match web pages and urls
  against a given pattern. [Patrik]
